--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   spring-app:
-    image: ericksousa312/spring-docker
+    build: .
     restart: always
     ports:
       - "9000:9000"
